# AEGIS

./: .eslintrc.cjs  .gitignore  AEGIS-BRAVE-01_SPRINT.md  AEGIS-BRAVE-02_SPRINT.md  AEGIS-silent.vbs  AEGIS.cmd  AEGIS_BLUEPRINT_v2.md  AEGIS_V4_BLUEPRINT.md  ARCHITECTURE.md  BACKLOG.md  BLUEPRINT_MASTER.md  BLUEPRINT_TECH.md  BLUEPRINT_UI.md  BUILD.bat  CHANGELOG.md  COMPETITIVE_ANALYSIS.md  CONTRIBUTING.md  COWORK_BUILD_PROMPT.md  FILE_MANIFEST.txt  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SPEC.md  MCP_INTEGRATION.md  MCP_SEPARATION_DECISION.md  MORNING_BRIEFING.md  PROJECT_DNA.json  PROJECT_DNA.yaml  PROJECT_STATE.json  README.md  SPRINT_AEGIS-AMBIENT-01.md  SPRINT_AEGIS-CATALOG-01.md  SPRINT_AEGIS-COCKPIT-02.md  SPRINT_AEGIS-DEVOPS-01.md  SPRINT_AEGIS-ELEV-01_COWORK_PROMPT.md  SPRINT_AEGIS-INTEL-01.md  SPRINT_AEGIS-INTEL-02.md  SPRINT_AEGIS-INTEL-03.md  SPRINT_AEGIS-INTEL-04.md  SPRINT_AEGIS-INTEL-05.md  SPRINT_AEGIS-PM2-01_COWORK_PROMPT.md  SPRINT_AEGIS-PROCS-01.md  (+24 more)
assets/: settings.hta  status.css  status.hta  status.js
installer/: aegis.nsi  hooks.nsh  install.ps1  license.txt
mcp-server/: package-lock.json  package.json  tsconfig.json
profiles/: build-mode.yaml  deep-research.yaml  idle.yaml  performance.yaml  presentation.yaml  wartime.yaml
scripts/: aegis-worker.ps1  fix-dashboard-delay.bat  fix-startup.bat  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  disk_io.rs  fix_profiles.py  lib.rs  main.rs  metrics.rs  profiles.rs  read_lines.py  sidecar.rs  tray.rs
src-tauri/windows/: hooks.nsi
(+70 files in other folders)
