[package]
name = "aegis"
version = "4.0.0"
description = "AEGIS — Cognitive Resource OS"
authors = ["Borrowed Light Group"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "aegis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
serde_yaml = "0.9"
log = "0.4"
env_logger = "0.11"
wmi = "0.13"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_System_ProcessStatus",
  "Win32_Security",
  "Win32_System_SystemInformation",
  "Win32_System_Diagnostics_ToolHelp",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
